src/objects/Team_Management__c.object
<CustomObject>
    <fields>
        <fullName>ADP_ID__c</fullName>
        <description>User Id of Payroll system ADP</description>
        <label>ADP ID</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ASD_LegalPlan_Retention__c</fullName>
        <defaultValue>false</defaultValue>
        <label>ASD LegalPlan Retention</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Active_User__c</fullName>
        <formula>User__r.IsActive</formula>
        <label>Active User</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Allow_Subscription_Save__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Allow Subscription Save</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Approval_Manager__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Approval Manager</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Team_Management</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Assistant_Manager__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Prevent anyone other than user in the role Sales Manager be selected.</description>
        <label>Assistant Manager</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Team_Management2</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Biz_BSI__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Biz BSI</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>CC_Biz__c</fullName>
        <defaultValue>false</defaultValue>
        <label>CC Biz</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>CC_IP__c</fullName>
        <defaultValue>false</defaultValue>
        <label>CC IP</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>CC_PS__c</fullName>
        <defaultValue>false</defaultValue>
        <label>CC PS</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Compliance_RR__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Compliance RR</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Compliance_Round_Robin__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Final RR</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Compliance_Status__c</fullName>
        <label>Compliance Status</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Live</fullName>
                </value>
                <value>
                    <fullName>Training</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>IP_BSI__c</fullName>
        <defaultValue>false</defaultValue>
        <label>IP BSI</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Lead_Supervisor__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Prevent anyone other than user in the role Sales Lead be selected.</description>
        <label>Lead Supervisor</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Team_Management3</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Manager__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Manager</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Team_Management1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Monitored_Department__c</fullName>
        <label>Monitored Department</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Sales</fullName>
                </value>
                <value>
                    <fullName>CCS</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Order_Routing_100_199__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Order Routing 100-199</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Order_Routing_200_299__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Order Routing 200-299</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Order_Routing_300_399__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Order Routing 300-399</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Order_Routing_400__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Order Routing 400+</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Order_Routing_99_or_less__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Order Routing 99 or less</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Order_Routing__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Order Routing</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>PSD_BSI__c</fullName>
        <defaultValue>false</defaultValue>
        <label>PSD BSI</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Pulled__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Pulled on Current RR</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Skills__c</fullName>
        <label>Campaigns</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Sykes_User__c</fullName>
        <formula>User__r.Sykes__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Sykes User</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>User__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>User</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Sales_Team_Management</relationshipName>
        <type>Lookup</type>
    </fields>
    <label>Team Management</label>
    <listViews>
        <fullName>All</fullName>
        <columns>RECORDTYPE</columns>
        <columns>NAME</columns>
        <columns>Skills__c</columns>
        <columns>Compliance_Status__c</columns>
        <columns>User__c</columns>
        <columns>Manager__c</columns>
        <columns>Assistant_Manager__c</columns>
        <columns>Lead_Supervisor__c</columns>
        <columns>Approval_Manager__c</columns>
        <columns>ADP_ID__c</columns>
        <columns>CREATEDBY_USER</columns>
        <columns>UPDATEDBY_USER</columns>
        <columns>Compliance_Round_Robin__c</columns>
        <columns>Allow_Subscription_Save__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Active_User__c</field>
            <operation>equals</operation>
            <value>1</value>
        </filters>
        <label>All</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>CCS_Compliance_RR</fullName>
        <columns>RECORDTYPE</columns>
        <columns>Compliance_RR__c</columns>
        <columns>Compliance_Status__c</columns>
        <columns>Pulled__c</columns>
        <columns>NAME</columns>
        <columns>Sykes_User__c</columns>
        <columns>User__c</columns>
        <columns>Approval_Manager__c</columns>
        <columns>Manager__c</columns>
        <columns>Assistant_Manager__c</columns>
        <columns>Lead_Supervisor__c</columns>
        <columns>ADP_ID__c</columns>
        <columns>CREATEDBY_USER</columns>
        <columns>UPDATEDBY_USER</columns>
        <columns>OWNER.LAST_NAME</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>RECORDTYPE</field>
            <operation>equals</operation>
            <value>Team_Management__c.Service_Team_Management</value>
        </filters>
        <filters>
            <field>Active_User__c</field>
            <operation>equals</operation>
            <value>1</value>
        </filters>
        <label>CCS Compliance RR</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>Compliance_RR</fullName>
        <columns>RECORDTYPE</columns>
        <columns>Compliance_RR__c</columns>
        <columns>Compliance_Status__c</columns>
        <columns>Pulled__c</columns>
        <columns>NAME</columns>
        <columns>User__c</columns>
        <columns>Manager__c</columns>
        <columns>Assistant_Manager__c</columns>
        <columns>Lead_Supervisor__c</columns>
        <columns>Approval_Manager__c</columns>
        <columns>ADP_ID__c</columns>
        <columns>CREATEDBY_USER</columns>
        <columns>UPDATEDBY_USER</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>RECORDTYPE</field>
            <operation>equals</operation>
            <value>Team_Management__c.Sales_Team_Management</value>
        </filters>
        <filters>
            <field>Active_User__c</field>
            <operation>equals</operation>
            <value>1</value>
        </filters>
        <label>Compliance RR</label>
        <language>en_US</language>
        <sharedTo>
            <role>Compliance_Management</role>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>Compliance_Team</fullName>
        <columns>NAME</columns>
        <columns>User__c</columns>
        <columns>Monitored_Department__c</columns>
        <columns>Compliance_Status__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>RECORDTYPE</field>
            <operation>equals</operation>
            <value>Team_Management__c.Compliance_Team_Management</value>
        </filters>
        <filters>
            <field>Active_User__c</field>
            <operation>equals</operation>
            <value>1</value>
        </filters>
        <label>Compliance Team</label>
        <language>en_US</language>
        <sharedTo>
            <role>Compliance_Management</role>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>Sales</fullName>
        <columns>NAME</columns>
        <columns>Compliance_Status__c</columns>
        <columns>User__c</columns>
        <columns>Manager__c</columns>
        <columns>Assistant_Manager__c</columns>
        <columns>Lead_Supervisor__c</columns>
        <columns>Approval_Manager__c</columns>
        <columns>ADP_ID__c</columns>
        <columns>Skills__c</columns>
        <columns>CREATEDBY_USER</columns>
        <columns>UPDATEDBY_USER</columns>
        <columns>Allow_Subscription_Save__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>RECORDTYPE</field>
            <operation>equals</operation>
            <value>Team_Management__c.Sales_Team_Management</value>
        </filters>
        <filters>
            <field>Active_User__c</field>
            <operation>equals</operation>
            <value>1</value>
        </filters>
        <label>Sales</label>
        <language>en_US</language>
        <sharedTo>
            <role>Outbound_Lead</role>
            <role>Outbound_Management</role>
            <role>Sales_Director</role>
        </sharedTo>
    </listViews>
    <nameField>
        <displayFormat>Team - {0000}</displayFormat>
        <label>Team Management Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Team Management</pluralLabel>
    <recordTypes>
        <fullName>Compliance_Team_Management</fullName>
        <active>true</active>
        <label>Compliance Team Management</label>
    </recordTypes>
    <recordTypes>
        <fullName>Sales_Team_Management</fullName>
        <active>true</active>
        <label>Sales Team Management</label>
    </recordTypes>
    <recordTypes>
        <fullName>Service_Team_Management</fullName>
        <active>true</active>
        <label>Service Team Management</label>
    </recordTypes>
    <sharingModel>Private</sharingModel>
    <validationRules>
        <fullName>Restrict_user_to_modify_within_5_mins</fullName>
        <active>true</active>
        <description>This rule is created to restrict user from editing team management record within 5 mins if the record type is Service Team Management</description>
        <errorConditionFormula>AND(((NOW()- LastModifiedDate)*24*60) &lt; 5,  RecordTypeId =&quot;012G0000001YaQV&quot;,  $User.ProfileId = &quot;00eG0000000SCwj&quot;)</errorConditionFormula>
        <errorMessage>Please wait for 5 minutes and then try to save the record.</errorMessage>
    </validationRules>
</CustomObject>